# MISC

./: PageRank.hs  TMIcor.hs
AUC/: AUC.hs
Classification/: NSC.hs  NTP.hs
GA/: Internal.hs  Select.hs  Types.hs
GSEA/: GSEA.hs  GSEATemplate.hs  Main.hs  Parser.hs  README
HeatMap/: Draw.hs  Label.hs
Kernel/Internal/: Operation.hs  Types.hs
LaTeX/: BioMarkerScreening.tex  Co-training.tex  NEJM2004.tex  Pipeline.tex  Platform.tex  SemiClass1.tex  SemiClass2.tex  SemiCluster1.tex  StratifiedCV.tex
LinearAlgebra/: MGS.hs  Matrix.hs
PPT/Biomarker/: Biomarker.org
PValueAdj/: LogRank.hs  PAdj.hs  RVM.hs  Test.hs  Zplot.hs  permFDR.tex
Plot/: Axis.hs  Function.hs  Histogram.hs  Test.hs  Trans.hs  note.txt
Regression/: Ridge.hs
Routine/: DiffExp.hs  Report.cabal  Template.hs  test.hs
Routine/ExpReporter/: ExpReporter.cabal  LICENSE
Routine/ExpReporter/doc/: README.org
Routine/ExpReporter/src/: ExpReporter.hs
Routine/ExpReporter/src/Report/: Sheet.hs  Types.hs
Routine/ExpReporter/src/Report/GUI/: Layout.hs
Routine/ExpReporter/src/Report/Sheet/: ATVSheet.hs  DEGSheet.hs  Styles.hs  Template.hs  UtilFun.hs
Routine/src/: AllTargets.hs  DiffExp.hs  GUI.hs  Main.hs  Report.hs  Styles.hs  Template.hs  Types.hs  UtilFun.hs  Wrapper.hs
Statistics/: Basic.hs  Corr.hs  Sampling.hs
SurvivalAnalysis/: CoxPH.hs  CoxScore.hs  Draw.hs  PGFPlotsTemplate.hs
bio-stat-toolbox/: LICENSE  bio-stat-toolbox.cabal
bio-stat-toolbox/benchmark/: tmiCorBench.hs
bio-stat-toolbox/src/Bio/Statistics/: Util.hs
bio-stat-toolbox/src/Bio/Statistics/Interaction/: TMIcor.hs
bio-stat-toolbox/src/Bio/Statistics/Interaction/TMIcor/: Internal.hs
