name:                bio-stat-toolbox
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

library 
  hs-source-dirs:      src
  exposed-modules:     Bio.Statistics.Interaction.TMIcor
                       Bio.Statistics.Util
  -- other-modules:       
  build-depends:       base ==4.6.*, 
                       primitive ==0.5.*,
                       parallel ==3.2.*, 
                       hashtables ==1.0.*,
                       vector ==0.10.*,
                       statistics ==0.10.*,
                       mwc-random ==0.12.*,
                       heaps,split,monad-par,
                       monad-par-extras
  ghc-options:
    -Wall -O2 -threaded -rtsopts -fllvm -optl-O3  
