name:                bio-stat-toolbox
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
-- copyright:           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

library 
  hs-source-dirs:      src
  exposed-modules:     Bio.Statistics.Interaction.TMIcor

  other-modules:       Bio.Statistics.Interaction.TMIcor.Internal
  build-depends:       base >=4.6, 
                       vector >=0.10,
                       mwc-random,
                       monad-par,
                       monad-par-extras,
                       deepseq,parallel
  ghc-options:
    -Wall -O3 -fllvm -optl-O3  
