name:                ExpReporter
version:             0.1.0.9
synopsis:            Expression Profiling Reporter
description:         Convert the .txt file exported by GeneSpring into an Excel Report.
license:             BSD3
license-file:        LICENSE
author:              Boyun Tang
maintainer:          tangboyun@hotmail.com
copyright:           Boyun Tang           
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.8

executable ExpReporter
  main-is:             ExpReporter.hs
  other-modules:       Report.GUI.Layout
                       Report.Sheet
                       Report.Sheet.ATVSheet
                       Report.Sheet.DEGSheet
                       Report.Sheet.Styles
                       Report.Sheet.Template
                       Report.Sheet.UtilFun
                       Report.Types
  hs-source-dirs:      src

  build-depends:       base, 
                       HStringTemplate,
                       SpreadsheetML-rich, 
                       colour, 
                       bytestring, 
                       vector, 
                       regex-posix,
                       directory,
                       filepath,
                       statistics,
                       gtk

  if os(windows)
      ghc-options:       -Wall -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-do-bind -optl-mwindows
  else    
      ghc-options:       -Wall -fno-warn-missing-signatures -fno-warn-incomplete-patterns -fno-warn-unused-do-bind
